tests/error/type_match/typename_array_slice.bz
// error: couldn't match the function call to the function
// note: function argument types are 'typename'
// note: candidate: 'function test1(T: [: const typename]) -> void'
function test1(T: [: const typename]);

function test()
{
	test1([: float64]);
}
